:memo: Ajustes Texto

--- a/contenido/pag21.html
+++ b/contenido/pag21.html
@@ -54,7 +54,8 @@
                     <div class="cont-conceptos">
                         <div class="filas">
                             <div class="conceptos1" id="concepto1" data-definicion="3">
-                                <p>Política de Identificación</p>
+                                <p>Oficial de Cumplimiento
+</p>
                             </div>
                         </div>
                         <div class="filas">
@@ -70,7 +71,7 @@
                         </div>
                         <div class="filas">
                             <div class="conceptos1" id="concepto1" data-definicion="2">
-                                <p>Política de Conocimiento</p>
+                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
                             </div>
                         </div>
                         <div class="filas">
@@ -84,20 +85,21 @@
 
                 <div class="filas">
                     <div class="enunciados" id="enunciado2" data-enunciado="2">
-                        <p>Se adiciona un riesgo medio entre alto y bajo a la clasificación del grado de riesgo de los
-                            clientes.</p>
+                        <p>Te permite enviar directamente al área a cargo del Oficial de Cumplimiento, avisos sobre operaciones o conductas que detectes de cualquiera, de otros Colaboradores, Clientes o Agentes, identificadas como Operaciones inusuales u Operaciones Internas Preocupantes.
+                        </p>
                     </div>
                     <div id="bloquearEnunciado2" class="bloquear"></div>
 
                     <div class="cont-conceptos">
                         <div class="filas">
                             <div class="conceptos2" id="concepto1" data-definicion="3">
-                                <p>Política de Identificación</p>
+                                <p>Oficial de Cumplimiento
+</p>
                             </div>
                         </div>
                         <div class="filas">
                             <div class="conceptos2" id="concepto1" data-definicion="5">
-                                <p>Operaciones inusuales e internas preocupantes
+                                <p>Comité de Comunicación y Control
                                 </p>
                             </div>
                         </div>
@@ -108,7 +110,7 @@
                         </div>
                         <div class="filas">
                             <div class="conceptos2" id="concepto1" data-definicion="2">
-                                <p>Política de Conocimiento</p>
+                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
                             </div>
                         </div>
                         <div class="filas">
@@ -122,20 +124,21 @@
 
                 <div class="filas">
                     <div class="enunciados" id="enunciado3" data-enunciado="3">
-                        <p>En esta política se incorpora la identificación de compradores de salvamentos y entidades
-                            fiduciarias.</p>
+                        <p>¿A quien se le envía el aviso sobre conductas u operaciones internas preocupantes o inusuales detectadas?
+                        </p>
                     </div>
                     <div id="bloquearEnunciado3" class="bloquear"></div>
 
                     <div class="cont-conceptos">
                         <div class="filas">
                             <div class="conceptos3" id="concepto1" data-definicion="3">
-                                <p>Política de Identificación</p>
+                                <p>Oficial de Cumplimiento
+</p>
                             </div>
                         </div>
                         <div class="filas">
                             <div class="conceptos3" id="concepto1" data-definicion="5">
-                                <p>Operaciones inusuales e internas preocupantes
+                                <p>Comité de Comunicación y Control
                                 </p>
                             </div>
                         </div>
@@ -146,7 +149,7 @@
                         </div>
                         <div class="filas">
                             <div class="conceptos3" id="concepto1" data-definicion="2">
-                                <p>Política de Conocimiento</p>
+                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
                             </div>
                         </div>
                         <div class="filas">
@@ -170,12 +173,13 @@
                     <div class="cont-conceptos">
                         <div class="filas">
                             <div class="conceptos4" id="concepto1" data-definicion="3">
-                                <p>Política de Identificación</p>
+                                <p>Oficial de Cumplimiento
+</p>
                             </div>
                         </div>
                         <div class="filas">
                             <div class="conceptos4" id="concepto1" data-definicion="5">
-                                <p>Operaciones inusuales e internas preocupantes
+                                <p>Comité de Comunicación y Control
                                 </p>
                             </div>
                         </div>
@@ -186,7 +190,7 @@
                         </div>
                         <div class="filas">
                             <div class="conceptos4" id="concepto1" data-definicion="2">
-                                <p>Política de Conocimiento</p>
+                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
                             </div>
                         </div>
                         <div class="filas">
@@ -200,8 +204,7 @@
 
                 <div class="filas">
                     <div class="enunciados" id="enunciado5" data-enunciado="5">
-                        <p>Deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de
-                            Comunicación y Control las haya dictaminado con ese carácter.
+                        <p>El Oficial de Cumplimiento la somete al análisis y dictamen del:
                         </p>
                     </div>
                     <div id="bloquearEnunciado5" class="bloquear"></div>
@@ -209,12 +212,13 @@
                     <div class="cont-conceptos">
                         <div class="filas">
                             <div class="conceptos5" id="concepto1" data-definicion="3">
-                                <p>Política de Identificación</p>
+                                <p>Oficial de Cumplimiento
+</p>
                             </div>
                         </div>
                         <div class="filas">
                             <div class="conceptos5" id="concepto1" data-definicion="5">
-                                <p>Operaciones inusuales e internas preocupantes
+                                <p>Comité de Comunicación y Control
                                 </p>
                             </div>
                         </div>
@@ -225,7 +229,7 @@
                         </div>
                         <div class="filas">
                             <div class="conceptos5" id="concepto1" data-definicion="2">
-                                <p>Política de Conocimiento</p>
+                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
                             </div>
                         </div>
                         <div class="filas">
@@ -249,13 +253,14 @@
             <div class="cont-conceptos">
                 <div class="filas">
                     <div class="conceptos" id="concepto1" data-definicion="3">
-                        <p>Política de Identificación</p>
+                        <p>Oficial de Cumplimiento
+</p>
                     </div>
                     <div id="bloquearConcepto3" class="bloquear"></div>
                 </div>
                 <div class="filas">
                     <div class="conceptos" id="concepto1" data-definicion="5">
-                        <p>Operaciones inusuales e internas preocupantes
+                        <p>Comité de Comunicación y Control
                         </p>
                     </div>
                     <div id="bloquearConcepto5" class="bloquear"></div>
@@ -268,7 +273,7 @@
                 </div>
                 <div class="filas">
                     <div class="conceptos" id="concepto1" data-definicion="2">
-                        <p>Política de Conocimiento</p>
+                        <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
                     </div>
                     <div id="bloquearConcepto2" class="bloquear"></div>
                 </div>
