--- a/contenido/pag29.html
+++ b/contenido/pag29.html
@@ -158,7 +158,7 @@
                         <img src="./build/img/contenido/Pag27/persona-circulo.svg" alt="hombre">
                     </figure>
                     <div class="pregunta">
-                        <p>¿Por qué el cliente quiere pagar la póliza en efectivo?</p>
+                        <p>El cliente quiere pagar su póliza en efectivo ¿La Compañía puede aceptarlo?</p>
                     </div>
                     <div class="instruccion">
                         <figure class="cont-imagen">
@@ -244,7 +244,8 @@
                         <img src="./build/img/contenido/Pag27/persona-circulo.svg" alt="hombre">
                     </figure>
                     <div class="pregunta">
-                        <p>¿Por qué el Agente está presionando para no identificarlo de acuerdo con el umbral que le corresponde al cliente y cerrar pronto la venta?</p>
+                        <p>¿Es correcto que el Agente esté presionando para no identificar al cliente de acuerdo con el umbral que le corresponde y cerrar pronto la venta?
+                        </p>
                     </div>
                     <div class="instruccion">
                         <figure class="cont-imagen">
