--- a/contenido/pag16.html
+++ b/contenido/pag16.html
@@ -23,8 +23,7 @@
         </a>
         <div class ="globos12" id="globo1">
             1. Deberás mantener confidencialidad respecto de la información de envío de reportes o requerimientos de
-            información y documentación, a la CNSF y demás autoridades facultadas para la prevención, investigación,
-            persecución y sanción en materia de Lavado de Dinero.
+            información y documentación, a la CNSF y demás autoridades facultadas.
         </div>
     </div>
     <div id="columnas">
