:+1: Add Frase pagina 20

--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -148,6 +148,10 @@
         </div>
     </div>
 
+    <div class="mensaje20">
+        <p>Se adicionan capítulos de Modelos Novedosos, de Intercambio de Información entre entidades, así como de Listas de Personas Bloqueadas.</p>
+    </div>
+
     <h2 id="subtitulo20">Obligación en caso de que la Compañía sea titular de una cuenta     Concentradora</h2>
 
     <div id="pag12">
