--- a/contenido/pag01.html
+++ b/contenido/pag01.html
@@ -86,18 +86,18 @@
             <p>2. Historia de cambios en la Regulación</p>
         </div>
         <div class="cont-temario" id="cont02">
-            <p>I. Relación entre la regulación y nuestro Manual de Cumplimiento de PLD/CFT</p>
-            <p>II. Diferencias entre la prevención del LD entre las aseguradoras y la reaseguradora</p>
+            <p>2.1 Relación entre la regulación y nuestro Manual de Cumplimiento de PLD/CFT</p>
+            <p>2.2 Diferencias entre la prevención del LD entre las aseguradoras y la reaseguradora</p>
             <p>Actividad 2</p>
         </div>
         <div class="titulo" id="lavado">
             <p>3. Lavado de Dinero</p>
         </div>
         <div class="cont-temario" id="cont03">
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; I. Etapas de Lavado de Dinero</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; II. Diferencias y similitudes entre Lavado de Dinero y Financiamiento al Terrorismo</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1. Organismos y autoridades que participan en la prevención del Lavado de Dinero y combate al Financiamiento al Terrorismo</p>
-            <p>I. Marco Legal en México</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.1 Etapas de Lavado de Dinero</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2 Diferencias y similitudes entre Lavado de Dinero y Financiamiento al Terrorismo</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.3 Organismos y autoridades que participan en la prevención del Lavado de Dinero y combate al Financiamiento al Terrorismo</p>
+            <p>3.4 Marco Legal en México</p>
             <p>Actividad 3</p>
         </div>
         <div class="titulo" id="tipologias">
