--- a/contenido/pag05.html
+++ b/contenido/pag05.html
@@ -110,7 +110,8 @@
                     <li>Recabar de la Cedente datos 
                         y documentos previamente a la  
                         Celebración del contrato. </li>
-                    <p class="espacio">Para realizar la identificación de la Cedente se hará bajo las medidas Simplificadas.</p>
+                    <!-- <p class="espacio">Para realizar la identificación de la Cedente se hará bajo las medidas Simplificadas.</p> -->
+                    <li>Para realizar la identificación de la Cedente se hará bajo las medidas Simplificadas.</li>
                     <li>En caso de la Reaseguradora.</li>
                     <li>Solo puede hacerse al inicio de la relación 
                         comercial. </li>   
