--- a/contenido/pag13.html
+++ b/contenido/pag13.html
@@ -10,7 +10,7 @@
 
 <body>
     
-    <div id="pag12">
+    <!-- <div id="pag12">
         <div id="cont-01">
             <figure class="personaje">
                 <img src="./build/img/contenido/Pag13/personaje.svg" alt="Personaje">
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div id="pag12-2">
         <div id="cont-01">
             <figure class="personaje-2">
