--- a/contenido/pag24.html
+++ b/contenido/pag24.html
@@ -32,10 +32,10 @@
 
                 <div class="cont-info" id="cont-ficha1">
                     <ul>
-                        <li>Compuesto por los sujetos obligados (S0).</li>
-                        <li>Identifican y conocen a los clientes.</li>
-                        <li>Monitorean operaciones.</li>
-                        <li>Detectan operaciones de riesgo.</li>
+                        <li>Compuesto por los sujetos obligados (S0).</li><br>
+                        <li>Identifican y conocen a los clientes.</li><br>
+                        <li>Monitorean operaciones.</li><br>
+                        <li>Detectan operaciones de riesgo.</li><br>
                         <li>Envían reportes.</li>
                     </ul>
                 </div>
@@ -72,7 +72,7 @@
 
                 <div class="cont-info" id="cont-ficha3">
                     <ul>
-                        <li>Creación del marco jurídico nacional relativo a PLD/CFT por medio de políticas.</li>
+                        <li>Creación del marco jurídico nacional relativo a PLD/CFT por medio de políticas.</li><br>
                         <li>Interpretación del marco normativo.</li>
                     </ul>
                 </div>
@@ -108,7 +108,7 @@
 
                 <div class="cont-info" id="cont-ficha5">
                     <ul>
-                        <li>Recibe reportes</li>
+                        <li>Recibe reportes</li><br>
                         <li>Analiza la información recibida para detectar posibles conductas.</li>
                     </ul>
                 </div>
