--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -20,95 +20,100 @@
     </div>
 
     <div class="tablaComparacion">
-        <div class="listaSeguro">
-            <h1>Seguro</h1>
-            <div class="puntos">
-                <div class="caja1">
-                    <ol type="1" start="1">
-                        <li>Pólizas</li>
-                        <li>Se Comercializan productos</li>
-                        <li>Servicios financieros</li>
-                        <li>CODUSEF</li>
-                        <li>GAFI | Producto de Alto Riesgo: componente de Ahorro e Inversión, el resto de productos
-                            son de Bajo Riesgo.</li>
-                        <li>Clientes:</li>
-                    </ol>
-                </div>
-                <div class="caja2">
-                    <ul>
-                        <li>Personas físicas</li>
-                        <li>Personas morales</li>
-                        <li>Entidades financieras</li>
-                        <li>Entidades gubernamentales</li>
-                        <li>Fideicomisos</li>
-                    </ul>
-                </div>
-                <div class="caja3">
-                    <ol type="1" start="7">
-                        <li>Primas emitidas</li>
-                        <li>Régimen de PLD/CFT con pilares de prevención estándar al 
-                            resto de entidades financieras:</li>
-                    </ol>
-                </div>
-                <div class="caja4">
-                    <ol type="a">
-                        <li>Identificación del Cliente</li>
-                        <li>Conocimiento del Cliente</li>
-                        <li>Enfoque basado en riesgo</li>
-                        <li>Estructuras internas</li>
-                        <li>Capacitación</li>
-                        <li>Reportes regulatorios</li>
-                        <li>Sistemas automatizados</li>
-                        <li>Lista de personas bloqueadas</li>
-                        <li>Auditoría interna</li>
-                    </ol>
-                </div>
-            </div>
+        <div class="tituloSeguro">
+            <h2>Seguro</h2>
         </div>
-    
-        <div class="separacionVS">
-            <h1>VS</h1>
+        <div class="tituloReaseguro">
+            <h2>Reaseguro</h2>
         </div>
-    
-        <div class="listaReaseguro">
-            <h1>Reaseguro</h1>
-            <div class="puntos">
-                <div class="caja1">
-                    <ol type="1">
-                        <li>Contratos de reaseguro</li>
-                        <li>Se suscriben carteras de Clientes, a través de contratos de reaseguro</li>
-                        <li>Instrumentos de dispersión de riesgos</li>
-                        <li>No Aplica</li>
-                        <li>GAFI | Riesgo: bajo</li>
-                        <li>Únicamente cendentes, es decir, instituciones financieras
-                            que sean aseguradoras y reafianzadoras</li>
-                        <li>Primas tomadas en reaseguro.</li>
-                        <li>Régimen de PLD/CFT con diversas particularidades:</li>
-                    </ol>
-                </div>
-                <div class="caja2">
-                    <ol type="a">
-                        <li>
-                            Identificación de la Cedente
-                            <ol type="i">
-                                <li>Únicamente aplica el Régimen Simplificado de 
-                                    Identificación</li>
-                            </ol>
-                        </li>
-                        <li>
-                            Conocimiento de la Cedente
-                            <ol type="i">
-                                <li>El origen de los recursos del Cliente ya fueron
-                                    identificados por la Cedente.</li>
-                            </ol>
-                        </li>
-                    </ol>
-                </div>
-            </div>
-            <figure>
-                <img src="./build/img/contenido/Pag26/mujer26.svg" alt="mano">
-            </figure>
+        <div class="seguro elementos">
+            <p>1. Pólizas</p>
         </div>
+        <div class="reaseguro elementos">
+            <p>1. Contratos de reaseguro</p>
+        </div>
+        <div class="seguro elementos">
+            <p>2. Se Comercializan productos</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>2. Se suscriben carteras de Clientes, a través de contratos de reaseguro</p>
+        </div>
+        <div class="seguro elementos">
+            <p>3. Servicios financieros</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>3. Instrumentos de dispersión de riesgos</p>
+        </div>
+        <div class="seguro elementos">
+            <p>4. CODUSEF</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>4. No Aplica</p>
+        </div>
+        <div class="seguro elementos">
+            <p>5. GAFI | Producto de Alto Riesgo: componente de Ahorro e Inversión, el resto de productos son de Bajo Riesgo.</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>5. GAFI | Riesgo: bajo</p>
+        </div>
+        <div class="seguro elementos">
+            <p>6. Clientes:</p>
+            <ul>
+                <li>Personas físicas</li>
+                <li>Personas morales</li>
+                <li>Entidades financieras</li>
+                <li>Entidades gubernamentales</li>
+                <li>Fideicomisos</li>
+            </ul>
+        </div>
+        <div class="reaseguro elementos">
+            <p>6. Únicamente cendentes, es decir, instituciones financieras
+                que sean aseguradoras y reafianzadoras</p>
+        </div>
+        <div class="seguro elementos">
+            <p>7. Primas emitidas</p>
+        </div>
+        <div class="reaseguro elementos">
+            <p>7. Primas tomadas en reaseguro.</p>
+        </div>
+        <div class="seguro elementos">
+            <p>8. Régimen de PLD/CFT con pilares de prevención estándar al 
+                resto de entidades financieras:</p>
+            <ol type="a">
+                <li>Identificación del Cliente</li>
+                <li>Conocimiento del Cliente</li>
+                <li>Enfoque basado en riesgo</li>
+                <li>Estructuras internas</li>
+                <li>Capacitación</li>
+                <li>Reportes regulatorios</li>
+                <li>Sistemas automatizados</li>
+                <li>Lista de personas bloqueadas</li>
+                <li>Auditoría interna</li>
+            </ol>
+        </div>
+        <div class="reaseguro elementos">
+            <p>8. Régimen de PLD/CFT con diversas particularidades:</p>
+            <ol type="a">
+                <li>
+                    Identificación de la Cedente
+                    <ol type="i">
+                        <li>Únicamente aplica el Régimen Simplificado de 
+                            Identificación</li>
+                    </ol>
+                </li>
+                <li>
+                    Conocimiento de la Cedente
+                    <ol type="i">
+                        <li>El origen de los recursos del Cliente ya fueron
+                            identificados por la Cedente.</li>
+                    </ol>
+                </li>
+            </ol>
+        </div>
+
+        <figure>
+            <img src="./build/img/contenido/Pag26/mujer26.svg" alt="mano">
+        </figure>
     </div>
 </body>
 </html>
