:pushpin: Cambio de página 06 a 08

--- a/contenido/pag07.html
+++ b/contenido/pag07.html
@@ -1,53 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 07</title>
+    <title>Página 08</title>
 </head>
-
 <body>
-    <div id="pag07">
-        <figure id="conversacion">
-            <img src="./build/img/contenido/Pag07/conversacion.svg" alt="conversacion">
-        </figure>
-        <span id="entrevista">
-            <h2>Objetivo de la entrevista</h2>
-            <li>Recabar datos y documentos de identificación.</li>
-            <li>Recabar la declaración firmada del cliente para comprobar si actúa
-                por sí mismo o por un tercero.
-            </li>
-            <li>Documentar y dejar constancia de la entrevista en un expediente.</li>
-        </span>
-    </div>
-    <div id="pag07-2">
-        <figure class="personaje">
-            <img src="./build/img/contenido/Pag07/personaje.svg" alt="personaje">
-        </figure>
-        <div id="globo">
-            Elige tu perfil para identificar la herramienta que debes usar durante la entrevista.
-        </div>
-        <div id="cont-blanco">
-            <div class="btn01">
-                <div id="btn-seguros">
-                    <a class="btn_cuadros07" href="#info-seguros">General de Seguros y General de Salud</a>
-                </div>
-                <div class ="cuadros07" id="info-seguros">
-                    <span>Utiliza el formato de Identificación del Cliente con prima anual de mayor a $7,500 dólares.</span>
+    <div id="cont-intro08">
+        <!-- <div id="figura-fondo"></div> -->
+
+        <div id="cont-mensaje08_1">
+            <figure class="cont-imagen">
+                <img src="./build/img/contenido/Pag08/Persona1.svg" alt="persona">
+            </figure>
+            <div id="mensaje1">
+                <div class="caja">
+                    <h3>Consideraciones para el  expediente de identificación</h3>
+                    <ul>
+                        <li>Puede ser físico o electrónico, pero <span>SIEMPRE debe estar completo</span>, con todos los datos y documentos del cliente. </li>
+                        <li><span>Si falta un sólo dato o documento, se considera INCOMPLETO</span>.</li>
+                        <li>Debes resguardarlo durante <span>10 años</span>.</li>
+                        <li><span>Los expedientes incompletos generan sanciones</span> por parte de la autoridad, ten mucho cuidado.</li>
+                    </ul>
                 </div>
             </div>
-            <div class="btn02">
-                <div id="btn-reaseguradora">
-                    <a class="btn_cuadros07" href="#info-reaseguradora">Reaseguradora Patria</a>
+        </div>
+
+        <div id="cont-mensaje08_2">
+            <div id="cont-alerta">
+                <div id="alerta">
+                    <!-- <h4 id="titulo-mensaje">
+                        Medidas simplificadas de identificación
+                    </h4> -->
+                    <div id="contenido">
+                        <div class="cont-imagen">
+                            <img src="./build/img/contenido/Pag08/Señal.svg" alt="señal">
+                        </div>
+                        <div id="alerta-mensaje">
+                            <h4>Nota:</h4>
+                            <p id="p1">
+                                Se entenderá por Tachadura y Enmendadura a la alteración del contexto de un Documento.
+                            </p>
+                            <p>
+                                Cuando los documentos de identificación proporcionados presenten tachaduras, o enmendaduras o sean ilegibles, el Agente o Colaborador solicitará nuevamente el documento, o recabará otro medio de identificación elegido de entre los descritos en el Manual de Cumplimiento PLD/CFT y hará la verificación correspondiente.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class ="cuadros07" id="info-reaseguradora">
-                    <span>Utiliza el formato de Identificación de la Cedente.</span>
+            </div>
+            <div id="mensaje08_2">
+                <div id="globo">
+                    <p>Conservación de expediente</p><br>
+                    <p>
+                        Los expedientes con los datos y documentos del cliente deben conservarse todo el tiempo de vigencia del contrato y durante un periodo no menor a 10 años luego de concluir la relación comercial.
+                    </p>
+                </div>
+                <div class="cont-imagen">
+                    <img src="./build/img/contenido/Pag08/Persona2.svg" alt="persona">
                 </div>
             </div>
         </div>
     </div>
 </body>
-
 </html>
