--- a/contenido/pag08.html
+++ b/contenido/pag08.html
@@ -1,66 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 08</title>
+    <title>Pagina 06</title>
 </head>
+
 <body>
-    <div id="cont-intro08">
-        <!-- <div id="figura-fondo"></div> -->
-
-        <div id="cont-mensaje08_1">
-            <figure class="cont-imagen">
-                <img src="./build/img/contenido/Pag08/Persona1.svg" alt="persona">
-            </figure>
-            <div id="mensaje1">
-                <div class="caja">
-                    <h3>Consideraciones para el  expediente de identificación</h3>
-                    <ul>
-                        <li>Puede ser físico o electrónico, pero <span>SIEMPRE debe estar completo</span>, con todos los datos y documentos del cliente. </li>
-                        <li><span>Si falta un sólo dato o documento, se considera INCOMPLETO</span>.</li>
-                        <li>Debes resguardarlo durante <span>10 años</span>.</li>
-                        <li><span>Los expedientes incompletos generan sanciones</span> por parte de la autoridad, ten mucho cuidado.</li>
-                    </ul>
-                </div>
+    <div id="cont-azul"></div>
+    <div id="cont-pag06">
+        <div id="cont-rojo">
+            <div id="clic-pag06">
+                <p>Clic en cada botón para conocer más detalles.</p>
+                <figure class="mano-pag06">
+                    <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
+                </figure>
             </div>
+            <figure class="personaje">
+                <img src="./build/img/contenido/Pag06/personaje.svg" alt="personaje">
+            </figure>
         </div>
-
-        <div id="cont-mensaje08_2">
-            <div id="cont-alerta">
-                <div id="alerta">
-                    <!-- <h4 id="titulo-mensaje">
-                        Medidas simplificadas de identificación
-                    </h4> -->
-                    <div id="contenido">
-                        <div class="cont-imagen">
-                            <img src="./build/img/contenido/Pag08/Señal.svg" alt="señal">
-                        </div>
-                        <div id="alerta-mensaje">
-                            <h4>Nota:</h4>
-                            <p id="p1">
-                                Se entenderá por Tachadura y Enmendadura a la alteración del contexto de un Documento.
-                            </p>
-                            <p>
-                                Cuando los documentos de identificación proporcionados presenten tachaduras, o enmendaduras o sean ilegibles, el Agente o Colaborador solicitará nuevamente el documento, o recabará otro medio de identificación elegido de entre los descritos en el Manual de Cumplimiento PLD/CFT y hará la verificación correspondiente.
-                            </p>
-                        </div>
+        <div id="cont-rosa">
+            <div class="libros">
+                <div id="libro1">
+                    <a class="btn-pag06" href="#cuadro1">
+                        <figure class="img-libro">
+                            <img src="./build/img/contenido/Pag06/libro-azul.svg" alt="libro1">
+                        </figure>
+                    </a>
+                    <h4>Documentación</h4>
+                    <div class="cuadro-pag06" id="cuadro1">
+                        <li>Formato KYC.</li>
+                        <li>Copia de Identificación del Administrador, CEO, Gerente General o Representante legal de la
+                            Cedente.</li>
+                        <li>Documento que acredite la naturaleza del Administrador, CEO, Gerente General o Representante
+                            legal de la Cedente.</li>
+                        <li>Certificación de un auditor independiente o en su caso documento en donde se indique que la
+                            Cedente cuenta con medidas en materia de PLD/CFT.</li>
+                    </div>
+                </div>
+                <div id="libro2">
+                    <a class="btn-pag06" href="#cuadro2">
+                        <figure class="img-libro">
+                            <img src="./build/img/contenido/Pag06/libro-naranja.svg" alt="libro2">
+                        </figure>
+                    </a>
+                    <h4>Información</h4>
+                    <div class="cuadro-pag06" id="cuadro2">
+                        <li>Conocer el negocio al que se dedican las contrapartes.</li>
+                        <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
+                            de PLD/CFT.
+                        </li>
+                        <li>Conocer si dichas instituciones
+                            son supervisadas por alguna autoridad competente.
+                        </li>
+                        <li>Identificar su buena reputación, considerando si tienen sanciones por incumplimiento.
+                        </li>
+                    </div>
+                </div>
+                <div id="libro3">
+                    <a class="btn-pag06" href="#cuadro3">
+                        <figure class="img-libro">
+                            <img src="./build/img/contenido/Pag06/libro-verde.svg" alt="libro3">
+                        </figure>
+                    </a>
+                    <h4>En caso de reaseguradora</h4>
+                    <div class="cuadro-pag06" id="cuadro3">
+                        <p>
+                            De acuerdo con la información
+                            de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
+                            abstenerse de realizar operaciones de reaseguro o reafianzamiento
+                            con aquellos que no tengan presencia física en la jurisdicción.
+                            Cuando la Aseguradora tenga indicios sobre algún cliente que actúa por otra persona, deberá
+                            solicitar al cliente información para identificar al Propietario
+                            Real de los recursos involucrados
+                            en la operación.
+                        </p>
                     </div>
                 </div>
             </div>
-            <div id="mensaje08_2">
-                <div id="globo">
-                    <p>Conservación de expediente</p><br>
-                    <p>
-                        Los expedientes con los datos y documentos del cliente deben conservarse todo el tiempo de vigencia del contrato y durante un periodo no menor a 10 años luego de concluir la relación comercial.
-                    </p>
+        </div>
+    </div>
+
+    <!-- Vista Telefono -->
+    <div id="cont-pag06Tel">
+        <div id="cont-img">
+            <figure class="img-personaje">
+                <img src="./build/img/contenido/Pag06/personajeTel.svg" alt="Personaje">
+            </figure>
+            <div id="clic-pag06Tel">
+                <!-- <figure class="mano-pag06">
+                    <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
+                </figure> -->
+                <p>Clic en cada botón para conocer más detalles.</p>
+            </div>
+        </div>
+        <div id="libros">
+            <div id="libro1">
+                <a class="btn-pag06Tel" href="#cuadro1-tel">
+                    <figure class="libro1-img">
+                        <img src="./build/img/contenido/Pag06/libro-azulTel.svg" alt="Libro">
+                    </figure>
+                </a>
+                <div class="cuadrosPag06-tel" id="cuadro1-tel">
+                    <li>Formato KYC.</li>
+                    <li>Copia de Identificación del Administrador, CEO, Gerente General o Representante legal de la
+                        Cedente.</li>
+                    <li>Documento que acredite la naturaleza del Administrador, CEO, Gerente General o Representante
+                        legal de la Cedente.</li>
+                    <li>Certificación de un auditor independiente o en su caso documento en donde se indique que la
+                        Cedente cuenta con medidas en materia de PLD/CFT.</li>
                 </div>
-                <div class="cont-imagen">
-                    <img src="./build/img/contenido/Pag08/Persona2.svg" alt="persona">
+            </div>
+            <div id="libro2">
+                <a class="btn-pag06Tel" href="#cuadro2-tel">
+                    <figure class="libro2-img">
+                        <img src="./build/img/contenido/Pag06/libro-naranjaTel.svg" alt="Libro">
+                    </figure>
+                </a>
+                <div class="cuadrosPag06-tel" id="cuadro2-tel">
+                    <li>Conocer el negocio al que se dedican las contrapartes.</li>
+                    <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
+                        de PLD/CFT.
+                    </li>
+                    <li>Conocer si dichas instituciones
+                        son supervisadas por alguna autoridad competente.
+                    </li>
+                    <li>Identificar su buena reputación, considerando si tienen sanciones por incumplimiento.
+                    </li>
+                </div>
+            </div>
+            <div id="libro3">
+                <a class="btn-pag06Tel" href="#cuadro3-tel">
+                    <figure class="libro3-img">
+                        <img src="./build/img/contenido/Pag06/libro-verdeTel.svg" alt="Libro">
+                    </figure>
+                </a>
+                <div class="cuadrosPag06-tel" id="cuadro3-tel">
+                    <p>
+                        De acuerdo con la información
+                        de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
+                        abstenerse de realizar operaciones de reaseguro o reafianzamiento
+                        con aquellos que no tengan presencia física en la jurisdicción.
+                        Cuando la Aseguradora tenga indicios sobre algún cliente que actúa por otra persona, deberá
+                        solicitar al cliente información para identificar al Propietario
+                        Real de los recursos involucrados
+                        en la operación.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
