:white_check_mark: Puntos finales

--- a/contenido/pag05.html
+++ b/contenido/pag05.html
@@ -112,9 +112,7 @@
                         Celebración del contrato. </li>
                     <!-- <p class="espacio">Para realizar la identificación de la Cedente se hará bajo las medidas Simplificadas.</p> -->
                     <li>Para realizar la identificación de la Cedente se hará bajo las medidas Simplificadas.</li>
-                    <li>En caso de la Reaseguradora.</li>
-                    <li>Solo puede hacerse al inicio de la relación 
-                        comercial. </li>   
+                    <li>En caso de la Reaseguradora solo puede hacerse al inicio de la <em><strong>relación</strong></em> comercial. </li>   
                 </div>
                 <div class="maxWidth cont-azul textColorWhite">
                     <p>Conforme a las Medidas Simplificadas – Identificación de Cedentes</p>
