--- a/contenido/pag24.html
+++ b/contenido/pag24.html
@@ -108,7 +108,7 @@
 
                 <div class="cont-info" id="cont-ficha5">
                     <ul>
-                        <li>Recibe reportes</li><br>
+                        <li>Recibe reportes.</li><br>
                         <li>Analiza la información recibida para detectar posibles conductas.</li>
                     </ul>
                 </div>
