--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -30,31 +30,31 @@
             <p>1. Pólizas</p>
         </div>
         <div class="reaseguro elementos">
-            <p>1. Contratos de reaseguro</p>
+            <p>1. Contratos de reaseguro.</p>
         </div>
         <div class="seguro elementos">
-            <p>2. Se Comercializan productos</p>
+            <p>2. Se Comercializan productos.</p>
         </div>
         <div class="reaseguro elementos">
-            <p>2. Se suscriben carteras de Clientes, a través de contratos de reaseguro</p>
+            <p>2. Se suscriben carteras de Clientes, a través de contratos de reaseguro.</p>
         </div>
         <div class="seguro elementos">
-            <p>3. Servicios financieros</p>
+            <p>3. Servicios financieros.</p>
         </div>
         <div class="reaseguro elementos">
-            <p>3. Instrumentos de dispersión de riesgos</p>
+            <p>3. Instrumentos de dispersión de riesgos.</p>
         </div>
         <div class="seguro elementos">
-            <p>4. CODUSEF</p>
+            <p>4. CODUSEF.</p>
         </div>
         <div class="reaseguro elementos">
-            <p>4. No Aplica</p>
+            <p>4. No Aplica.</p>
         </div>
         <div class="seguro elementos">
             <p>5. GAFI | Producto de Alto Riesgo: componente de Ahorro e Inversión, el resto de productos son de Bajo Riesgo.</p>
         </div>
         <div class="reaseguro elementos">
-            <p>5. GAFI | Riesgo: bajo</p>
+            <p>5. GAFI | Riesgo: bajo.</p>
         </div>
         <div class="seguro elementos">
             <p>6. Clientes:</p>
@@ -68,10 +68,10 @@
         </div>
         <div class="reaseguro elementos">
             <p>6. Únicamente cendentes, es decir, instituciones financieras
-                que sean aseguradoras y reafianzadoras</p>
+                que sean aseguradoras y reafianzadoras.</p>
         </div>
         <div class="seguro elementos">
-            <p>7. Primas emitidas</p>
+            <p>7. Primas emitidas.</p>
         </div>
         <div class="reaseguro elementos">
             <p>7. Primas tomadas en reaseguro.</p>
@@ -98,7 +98,7 @@
                     Identificación de la Cedente
                     <ol type="i">
                         <li>Únicamente aplica el Régimen Simplificado de 
-                            Identificación</li>
+                            Identificación.</li>
                     </ol>
                 </li>
                 <li>
