--- a/contenido/pag01.html
+++ b/contenido/pag01.html
@@ -62,7 +62,7 @@
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; II. Entrevista personal con el cliente</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; III. Integración de expedientes y umbrales</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; IV. Integración de expediente de la Cedente y medidas simplificadas de identificación.</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; V. Conservación de expediente.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; V. Conservación de expediente</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; VI. Actualización de expediente</p>
             <p>1.3 Identificación del Cliente</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; I. Momentos de Identificación del Cliente y la Cedente</p>
@@ -94,9 +94,9 @@
             <p>3. Lavado de Dinero</p>
         </div>
         <div class="cont-temario" id="cont03">
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.1 Etapas de Lavado de Dinero</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.2 Diferencias y similitudes entre Lavado de Dinero y Financiamiento al Terrorismo</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.3 Organismos y autoridades que participan en la prevención del Lavado de Dinero y combate al Financiamiento al Terrorismo</p>
+            <p>3.1 Etapas de Lavado de Dinero</p>
+            <p>3.2 Diferencias y similitudes entre Lavado de Dinero y Financiamiento al Terrorismo</p>
+            <p>3.3 Organismos y autoridades que participan en la prevención del Lavado de Dinero y combate al Financiamiento al Terrorismo</p>
             <p>3.4 Marco Legal en México</p>
             <p>Actividad 3</p>
         </div>
